--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         body {
             margin: 0;
             padding: 0;
-            background-color: #0d0d0d; /* Deep charcoal */
+            background-color: #0d0d0d;
             /* CRITICAL FIX for mobile full-screen */
             width: 100vw;
             height: 100vh;
@@ -82,94 +82,4 @@
             box-shadow: 0 6px 8px rgba(0, 0, 0, 0.4);
         }
 
-        @media screen and (max-width: 600px) {
-            .nav-button {
-                width: 60px;
-                height: 60px;
-                font-size: 28px;
-                margin: 0 8px;
-            }
-        }
-    </style>
-</head>
-<body>
-
-    <div id="slideshow-container">
-        <img id="rotating-image" src="" alt="Ad Display" />
-    </div>
-
-    <div class="controls-overlay">
-        <button class="nav-button" onclick="changeAd(-1)">&#9664;</button> <button class="nav-button" onclick="changeAd(1)">&#9654;</button>  </div>
-
-    <div id="ad-data" style="display:none;">
-        <div data-file="ads/Ad1.jpg" data-link="https://www.google.com/"></div>
-        <div data-file="ads/Ad2.jpg" data-link="https://github.com/visualconnections-gif"></div>
-        <div data-file="ads/Ad3.jpg" data-link="https://www.example.com/client3"></div>
-        </div>
-
-
-    <script>
-        const adContainer = document.getElementById('ad-data');
-        const adElements = Array.from(adContainer.children); // Gets all ad elements (the divs)
-        const rotatingImage = document.getElementById('rotating-image');
-
-        let currentAdIndex = 0;
-        const adInterval = 5000; // 5 seconds automatic rotation
-        let timer; // Variable to hold the interval timer
-
-        // --- Core Functions ---
-
-        function updateAd() {
-            if (adElements.length === 0) {
-                rotatingImage.src = ''; 
-                rotatingImage.alt = 'No Ads Found';
-                return;
-            }
-
-            const currentAdData = adElements[currentAdIndex];
-            
-            // Set the image source using the 'data-file' attribute
-            rotatingImage.src = currentAdData.getAttribute('data-file');
-        }
-
-        function rotateAd() {
-            currentAdIndex = (currentAdIndex + 1) % adElements.length;
-            updateAd();
-        }
-
-        function changeAd(direction) {
-            // Clear the automatic rotation when user interacts
-            clearInterval(timer);
-
-            let newIndex = currentAdIndex + direction;
-            if (newIndex < 0) {
-                newIndex = adElements.length - 1;
-            } else if (newIndex >= adElements.length) {
-                newIndex = 0;
-            }
-            currentAdIndex = newIndex;
-            updateAd();
-            
-            // Restart the timer
-            timer = setInterval(rotateAd, adInterval); 
-        }
-
-        // --- Hot Link Click Handler ---
-        rotatingImage.addEventListener('click', () => {
-            const currentAdData = adElements[currentAdIndex];
-            const link = currentAdData.getAttribute('data-link');
-            if (link) {
-                window.open(link, '_blank'); // Opens link in a new tab/window
-            }
-        });
-
-        // --- Initialization ---
-        window.onload = function() {
-            if (adElements.length > 0) {
-                updateAd(); 
-                timer = setInterval(rotateAd, adInterval);
-            }
-        };
-    </script>
-</body>
-</html>
+        @media screen and (
