Final Fix: Reverted to explicit path for absolute GitHub Pages reliability

--- a/index.html
+++ b/index.html
@@ -8,14 +8,11 @@
     <meta property="og:description" content="A dynamic, rotating ad display for mobile devices.">
 
     <style>
-        /* --------------------------------------------------------------------
-           CSS: Professional Theme & Full-Screen Fixes (Finalized)
-           -------------------------------------------------------------------- */
+        /* CSS: Finalized and Correct */
         body {
             margin: 0;
             padding: 0;
             background-color: #0d0d0d;
-            /* CRITICAL FIX for mobile full-screen */
             width: 100vw;
             height: 100vh;
         }
@@ -110,4 +107,5 @@
         <div data-file="/ads/Ad6.jpg" data-link="https://www.example.com/client6"></div>
         <div data-file="/ads/Ad7.jpg" data-link="https://www.example.com/client7"></div>
         <div data-file="/ads/Ad8.jpg" data-link="https://www.example.com/client8"></div>
-        <div data-file="/ads/Ad9.jpg" data-link="https://www.example.com/client
+        <div data-file="/ads/Ad9.jpg" data-link="https://www.example.com/client9"></div>
+        <div data-file="/ads/
